testData/fixtures/pitfalls/suspicious-binary-operations.array-concatenation.php
<?php

return [
    '...' <error descr="Concatenation with an array doesn't make much sense here.">.</error> [],
    [] <error descr="Concatenation with an array doesn't make much sense here.">.</error> '...',
];